--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,14 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "ts-node ": {
+    "compilerOptions": {
+      "module": "CommonJS",
+      "target": "es6",
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true
+    }
+  },
   "exclude": ["node_modules"]
 }
