--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "seed": "ts-node ./scripts/loadDb.ts"
   },
   "dependencies": {
-    "@datastax/astra-db-ts": "^1.5.0",
+    "@datastax/astra-db-ts": "^2.0.1",
     "@langchain/community": "^0.3.24",
-    "dotenv": "^16.4.7",
+    "ai": "^4.3.16",
+    "dotenv": "^16.5.0",
     "gpt-3-encoder": "^1.1.4",
-    "langchain": "^0.3.11",
+    "langchain": "^0.3.27",
     "next": "15.1.4",
+    "openai": "^4.103.0",
     "puppeteer": "^19.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,5 +32,4 @@
     "eslint-config-next": "15.1.4",
     "typescript": "^5"
   }
-
 }
